// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List calls setSelectedLists with empty array when deselecting list 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="list-item-row row"
    >
      <div
        class="mx-sm-auto col-1"
      >
        <input
          class="multi-select-check"
          type="checkbox"
        />
        <div
          class="list-item-multi-divider"
        />
      </div>
      <div
        class="col-sm-11 col-10"
      >
        <div
          class="ms-1 pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              foo
            </h5>
          </div>
          <div
            class="list-multi-created-at col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class="list-multi-buttons pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List calls setSelectedLists with list when selecting list 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="list-item-row row"
    >
      <div
        class="mx-sm-auto col-1"
      >
        <input
          class="multi-select-check"
          type="checkbox"
        />
        <div
          class="list-item-multi-divider"
        />
      </div>
      <div
        class="col-sm-11 col-10"
      >
        <div
          class="ms-1 pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              foo
            </h5>
          </div>
          <div
            class="list-multi-created-at col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class="list-multi-buttons pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List does not render Link when includeLinkToList is false 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-12"
      >
        <div
          class=" pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              foo
            </h5>
          </div>
          <div
            class="col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class=" pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List does render Link when includeLinkToList is true 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-12"
      >
        <div
          class=" pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <a
              class="router-link"
              data-discover="true"
              href="/v2/lists/id1"
            >
              <h5
                class="mb-1"
              >
                foo
              </h5>
            </a>
          </div>
          <div
            class="col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class=" pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
